---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Seperated into its own mod.
    - Added Filter Fill Toolbar.
    - Added Requester Fill Toolbar.
    - Added Inventory Sorting.
    - Added Chest Limiting.
    - Added Auto Trash Fix.