@@ -6,5 +6,6 @@ require('scripts/copychests')
 require('scripts/inventorysort')
 require('scripts/chestlimit')
 require('scripts/auto-trash-fix')
+require('scripts/auto-stock')
 
 remote.add_interface(script.mod_name, require('__stdlib__/stdlib/scripts/interface'))
