@@ -7,10 +7,12 @@ PickerInventoryTools=Fast Filter Fill, Fast Requests, Chest Contents Cut/paste, 
 [mod-setting-name]
 picker-auto-sort-inventory=Automatically Sort Chests
 picker-fix-trash-filters=Sync Trash Filters and Logistics
+picker-auto-stock=Auto Stock from Trash Filters
 
 [mod-setting-description]
 picker-auto-sort-inventory=Automatically sort container inventories.
 picker-fix-trash-filters=Sync trash filters with logistics when inventory is opened.
+picker-auto-stock=Auto stock from trash.
 
 [chest]
 copy-src=Pick new container to move contents into.
