@@ -8,3 +8,4 @@ Date: ??????
     - Added Inventory Sorting.
     - Added Chest Limiting.
     - Added Auto Trash Fix.
+    - Added Auto Stock.
